# beancount-rabobank

./: LICENSE.md  README.md  pyproject.toml
beancount_rabobank/: rabobank.py  rabobank_test.py
beancount_rabobank/test_files/: CSV_A_20201231_162236.csv  CSV_A_20201231_162236.csv.file_account  CSV_A_20201231_162236.csv.file_name  CSV_A_20201231_162237.csv  CSV_A_20201231_162237.csv.file_name  CSV_A_NL00RABO1234567890_EUR_20220331_20220702.csv  CSV_A_NL00RABO1234567890_EUR_20220331_20220702.csv.extract  CSV_A_NL00RABO1234567890_EUR_20220331_20220702.csv.file_name
